# skmiscpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_static/css/: custom.css
docs/_static/js/: custom_copy.js
example_data/: mosquito_nets_v2.csv
src/skmiscpy/: __init__.py  cbs.py  checker.py  here.py  plot_mirror_histogram.py  plot_smd.py  plotting.py  smd.py  utils.py
tests/: test_here.py  test_plot_mirror_histogram.py  test_plot_smd.py  test_skmiscpy.py  test_smd.py
