[tool.poetry]
name = "skmiscpy"
version = "0.1.0"
description = "Contains a few functions useful for data-analysis, causal inference etc."
authors = ["Shafayet Khan Shafee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
