[tool.poetry]
name = "skmiscpy"
version = "0.2.0"
description = "Contains a few functions useful for data-analysis, causal inference etc."
authors = ["Shafayet Khan Shafee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
statsmodels = "^0.14.2"
jupyter = "^1.0.0"
black = "^24.8.0"
pytest-cov = "^5.0.0"
myst-nb = {version = "^1.1.1", python = "^3.9"}
sphinx-autoapi = "^3.2.1"
sphinx-rtd-theme = "^2.0.0"
linkify-it-py = "^2.0.3"
sphinx-immaterial = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
